# codebase_rag

./: .gitignore  LICENSE  cocoindex_entrypoint.py  pyproject.toml
ai_agents/: insights_agent.py
bases/: base_alchemy_pg_client.py  base_embedder.py
bases/orm_repositories/: base_dependency_graph_repository.py  base_files_repository.py  base_insights_repository.py  base_python_dependency_graph_repository.py
ci/local/: docker-compose.yaml
config/: ai_config.py  app_config.py  integration_config.py  pg_config.py
db_clients/: alchemy_pg_client.py
dto/: dependency_graph_node_dto.py  git_file_dto.py  insight_dto.py  python_dependency_graph_node_dto.py
embedders/: files_embedder.py  insights_embedder.py  utils.py  vector_store_factories.py  vector_store_factory.py
git_clients/: github_client.py
graph_builders/: python_files_graph_builder.py
migrations/: env.py
migrations/versions/: 9a30f406d9cf_init_tables.py  be6bb45a8e88_init_tables.py  f24da8f10734_init_tables.py
orm/models/: __init__.py  base_model_orm.py  embed_chunk_orm.py  file_chunk_orm.py  file_orm.py  insight_orm.py  python_dependency_graph_orm.py
orm/repositories/: base_repository.py  dependency_graph_repository.py  files_repository.py  insights_repository.py  python_dependency_graph_repository.py
services/: python_files_graph_builder.py
utils/: const.py
