[project]
name = "codebase-rag"
version = "1.0.0"
description = ""
authors = [
    {name = "vladushka2000",email = "nazipovvt@yandex.ru"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
